[package]
name = "Floem-Epub"
version = "0.1.0"
edition = "2021"


[dependencies]
floem = {version = "0.2.0", features = ["rfd-async-std", "default-image-formats", "default", "vello"]}
floem_renderer = {version = "0.2.0"}
roxmltree = "0.19.0"
scraper = "0.18"
rbook = "0.5.0"
image = "0.24.9"
sha2 = "0.11.0-pre.3"
rayon = "1.10.0"
rustc_data_structures = "0.1.2"
threadpool = "1.8.1"
crossbeam = "0.8.4"
rand = "0.9.0"
csv = "1.3.0"
walkdir = "2.5.0"
itertools = "0.14.0"
zip = "0.6.3"
regex = "1.10.4"
uuid = { version = "1.14.0", features = ["v4"] }
anyhow = "1.0.82"
lightningcss = "1.0.0-alpha.63"
open = "5.3.2"